--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,7 +6,30 @@
     font-size: 20px;
 }
 
+.image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  gap: 10px;
+}
+
 .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.left {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.right {
   display: block;
   margin-left: auto;
   margin-right: auto;
